syntax = "proto3";
package sei.oracle.v1;

import "gogoproto/gogo.proto";
import "oracle/v1/oracle.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/oracle/types";

message GenesisState {
  Params                     params             = 1 [(gogoproto.nullable) = false];
  repeated FeederDelegation  feeder_delegations = 2 [(gogoproto.nullable) = false];
  repeated ExchangeRateTuple exchange_rates     = 3
      [(gogoproto.castrepeated) = "ExchangeRateTuples", (gogoproto.nullable) = false];
  repeated PenaltyCounter                  penalty_counters                    = 4 [(gogoproto.nullable) = false];
  reserved 5; // from prevote that got removed
  repeated AggregateExchangeRateVote    aggregate_exchange_rate_votes    = 6 [(gogoproto.nullable) = false];
  repeated PriceSnapshot price_snapshots = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "PriceSnapshots"
  ];
}

message FeederDelegation {
  string feeder_address    = 1;
  string validator_address = 2;
}

message PenaltyCounter {
  string validator_address = 1;
  VotePenaltyCounter vote_penalty_counter = 2;
}
