syntax = "proto3";
package cosmos.accesscontrol.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/accesscontrol/constants.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/accesscontrol/types";


message AccessOperation {
    AccessType access_type  = 1;
    ResourceType resource_type  = 2;
    string identifier_template = 3;
}

message MessageDependencyMapping {
    string message_key = 1;
    repeated AccessOperation access_ops = 2 [
        (gogoproto.nullable) = false
    ];
}
